# muse

./: README.md
python/: end_to_end.py  model.h5  recover_conv.py  toy-mnist.py
rust/algebra/: Cargo.toml
rust/algebra/src/: fixed_point.rs
rust/algebra/src/fields/: mod.rs
rust/algebra/src/fields/models/: fp_64.rs
rust/algebra/src/fields/near_mersenne_64/: mod.rs
rust/bench-utils/: Cargo.toml
rust/crypto-primitives/: Cargo.toml  anf.sage  mod_mul.py
rust/crypto-primitives/benches/: garbling.rs
rust/crypto-primitives/src/: additive_share.rs  beavers_mul.rs  gc.rs  lib.rs
rust/experiments/: Cargo.toml  bandwidth_client.sh  example.txt  latency_client.sh  latency_server.sh  memory_client.sh  memory_server.sh  validation.sh
rust/experiments/src/: lib.rs  minionn.rs  mnist.rs
rust/experiments/src/latency/: client.rs  server.rs
rust/experiments/src/latency/acg/: client.rs  server.rs
rust/experiments/src/latency/cds/: client.rs  server.rs
rust/experiments/src/latency/garbling/: client.rs  server.rs
rust/experiments/src/latency/input_auth/: client.rs  server.rs
rust/experiments/src/latency/input_auth_ltme/: client.rs  server.rs
rust/experiments/src/latency/minionn/: client.rs  server.rs
rust/experiments/src/latency/mnist/: client.rs  server.rs
rust/experiments/src/latency/resnet32/: client.rs  server.rs
rust/experiments/src/latency/triples_gen/: client.rs  server.rs
rust/neural-network/: Cargo.toml
rust/neural-network/src/: lib.rs
rust/neural-network/src/layers/: mod.rs  non_linear.rs
rust/neural-network/src/layers/linear/: average_pooling.rs  mod.rs
rust/neural-network/src/tensors/: macros.rs  mod.rs
rust/protocols/: Cargo.toml
rust/protocols-sys/: Cargo.toml  build.rs
rust/protocols-sys/c++/: CMakeLists.txt
rust/protocols-sys/c++/MP-SPDZ/: cds.mpc
rust/protocols-sys/c++/SCALE-MAMBA/: cds.mpc  conversion.py
rust/protocols-sys/c++/src/lib/: conv2d.cpp  conv2d.h  fc_layer.cpp  fc_layer.h  im2col.cpp  interface.cpp  interface.h  triples_gen.cpp
rust/protocols-sys/src/: bindings.rs  client_acg.rs  client_gen.rs  lib.rs  server_acg.rs  server_gen.rs
rust/protocols-sys/tests/: interface_test.rs
rust/protocols/src/: bytes.rs  cds.rs  error.rs  gc.rs  lib.rs  linear_layer.rs  mpc.rs  mpc_offline.rs  neural_network.rs  tests.rs
