[package]
name = "protocols-sys"
version = "0.1.0"
edition = "2018"
authors = [
    "Ryan Lehmkuhl",
    "Pratyush Mishra",
    "Akshayaram Srinivasan",
    "Raluca Ada Popa",
]
description = "FFI wrapper around the C++ library used in Muse"
keywords = ["cryptography", "finite fields", "homomorphic encryption",]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"

[build-dependencies]
bindgen = { version = "0.52.0" }
cmake = { version = "0.1.42" }

[dependencies]
algebra= { path="../algebra" }
crypto-primitives= { path="../crypto-primitives" }
neural-network = { path="../neural-network" }
ndarray = { version = "0.12", features = [ "serde-1" ] }
num-traits = { version = "0.2.6"}
rand = { version = "0.6" }

[dev-dependencies]
rand_chacha = { version = "0.1.1" }
itertools = "0.9.0"
